[package]
name = "hub-recovery"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
hex = { version = "0.4", features = ["serde"] }
ldk-node = { git = "https://github.com/getAlby/ldk-node" }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
url = "2"
