[package]
name = "hub-recovery"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10"
anyhow = "1"
bip39 = "2.1.0"
bitcoin = "0.32.4"
clap = { version = "4.5", features = ["derive"] }
hex = { version = "0.4", features = ["serde"] }
hmac = "0.12"
ldk-node = { git = "https://github.com/getAlby/ldk-node" }
log = "0.4"
log4rs = { version = "1", default-features = false, features = ["file_appender"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
url = "2"
